# thrift_client_simple

./: .gitignore  Cargo.toml  Makefile  bm_stus_data.json  bm_user_data.json  latency_2000t_100000_256kB_in_ns  latency_2000t_50000_64kB_in_ns  run_client.sh  run_server.sh  test_latency.sh  test_qps.sh  test_throuphut.sh
lib/: Cargo.toml
lib/src/: autogen.rs  errors.rs
lib/src/protocol/: .binary.rs.swp  binary.rs  compact.rs  mod.rs  multiplexed.rs  stored.rs
lib/src/server/: async_server.rs  mod.rs  multiplexed.rs  threaded.rs
lib/src/transport/: async_buffered.rs  async_mod.rs  async_simple.rs  buffered.rs  mod.rs
lib/test/: Makefile  Makefile.in
lib/test/thrifts/: .Base_One.thrift.swp
src/: lib.rs  shared.rs  thrift  tutorial.rs
src/lib/: Cargo.toml  Makefile  Makefile.in
src/lib/src/protocol/: binary.rs  mod.rs
thrifts/: shared.thrift
