[package]
name = "bm_datagen"
version = "0.1.0"
authors = ["Administrator"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"
serde = {version="1.0.115", features=["derive"]}
thrift = "0.13.0"
tokio = {version="0.2.22", features=["full"]}
num_cpus = "1.13.0"
async-trait = "0.1.40"
pin-project = "0.4.23"
futures = "0.3.5"
futures-core = "0.3.5"
lazy_static = "1.4.0"
ordered-float = "2.0.0"